import handlebars and hbars (used for automatically compiling handlebars templates when requiring them), use handlebars for templates instead of underscore templating

--- a/examples/computation-store/src/main/webapp/assets/js/view/computation-table.hbs
+++ b/examples/computation-store/src/main/webapp/assets/js/view/computation-table.hbs
@@ -7,12 +7,12 @@
         </tr>
     </thead>
     <tbody>
-        <% _.forEach(computations, function(c) { %>
+        {{#each computations }}
         <tr>
-            <td><%- c.id %></td>
-            <td><%- c.name %></td>
-            <td><%- c.cost %></td>
+            <td>{{ id }}</td>
+            <td>{{ name }}</td>
+            <td>{{ cost }}</td>
         </tr>
-        <% }); %>
+        {{/each}}
     </tbody>
 </table>
